--- a/style.css
+++ b/style.css
@@ -8,32 +8,34 @@ body {
 }
 
 h1 {
-    font-weight: 700;
-    border: 1px solid green;
+    font-weight: 500;
+    /* border: 1px solid green; */
     width: 300px;
 
 }
 
 h2 {
     font-weight: 500;
-    border: 1px solid green;
+    /*border: 1px solid green;*/
     width: 150px;
+    padding-top: 30px;
+    margin-top: 30px;
+   
     
 }
 
 main,
 footer,
 header {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 800px;
     margin-left: auto;
     margin-right: auto;
     
 }
 
-header,
 footer {
-    background-color: rgb(219, 219, 219);
+    margin-top: 100px;
 }
 
 .nav-list {
@@ -41,16 +43,18 @@ footer {
     justify-content: center;
     align-items: center;
     list-style: none;
+    padding-bottom: 30px;
 }
 
 .nav-link {
     padding: 0 20px;
     line-height: 50px;
     text-decoration: none;
-    text-transform: uppercase;
-    font-size: 10px;
+    /* text-transform: uppercase; */
+    font-size: 12px;
     font-weight: 700;
     color: grey;
+    /* border: 1px dotted red; */
 
 }
 
@@ -58,17 +62,19 @@ footer {
 .footer-items {
     margin-left: 50px;
     margin-right: 50px;
+    /* border: 1px solid yellow; */
 }
 
 .footer-items {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 12px;
     
 }
 
 .social-list {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     width: 120px;
     margin: 0;
     padding: 0;
@@ -79,7 +85,55 @@ footer {
 }
 
 .social-list-item {
-    border: 1px dotted red;
+    /* border: 1px dotted red; */
     margin: 0;
     padding: 0;
+}
+
+.about-me {
+    margin: 0 0;
+    padding: 0 0;
+    background: linear-gradient(to top, rgb(228, 228, 228), rgb(255, 255, 255) );
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding-bottom: 50px;
+    padding-top: 30px;
+}
+
+.my-photo {
+    border-radius: 50%;
+    border: 5px solid white;
+    margin-left: 100px;
+    
+}
+
+.hello {
+    font-weight: bold;
+}
+
+.code {
+    width: 750px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 0;    
+    /* border: 1px solid red;  */
+    /* background-color: rgb(240, 240, 240); */
+    font-size: 13px;
+    
+}
+
+.contacts-list {
+    list-style: none;
+    padding: 0 0;
+    margin: 0 0;
+}
+
+.contacts-item {
+    padding-top: 10px;
+    /* border: 1px solid blue; */
+}
+
+span {
+    font-weight: bolder;
 }
